# pipecat-blackjack-game-voice-agent-with-react-hud

./: README.md  bot.py  env.example  pyproject.toml  services_factory.py
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx
client/src/components/: VoiceVisualizer.tsx
client/src/hooks/: usePipecat.ts
